Fix fullscreen mode on Linux to use the fullscreen hint, rather than manually sizing the window (bug 176640). Move the existing implementation of fullscreen mode from nsGlobalWindow to nsBaseWidget, so that it can be overridden in the gtk widget implementation.  r=blizzard, sr=hewitt.